--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <hr size="3" noshade>
 
-  <h4><a href="C:\Users\marim\OneDrive\Documents\Udemy\Web Development\Contact-Me.html">Contact Me</a></h4>
+  <h4><a href="Contact-Me.html">Contact Me</a></h4>
 </body>
 
 </html>
